--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <title>ryan</title>
 </head>
 <body>
-  ![image](ryan6-bit.github.io/90153761_614745109380861_3043776261055840256_n.jpg)
+  ![image](https://github.com/ryan6-bit/ryan6-bit.github.io/blob/master/90153761_614745109380861_3043776261055840256_n.jpg)
   
   
 </body>
