--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <title>ryan</title>
 </head>
 <body>
-  Instagram:<a href="https://www.instagram.com/hyc_t_h/?hl=zh-tw">
+  <a href="https://www.instagram.com/hyc_t_h/?hl=zh-tw">Instagram</a>
   
 </body>
