--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   <h3>I'm from Taiwan.</h3>
   
   <h3>my<a href="https://www.instagram.com/hyc_t_h/?hl=zh-tw">Instagram</a></h3>
-  <h3>my<a href="https://www.facebook.com/profile.php?id=100039723008051">Instagram</a></h3>
+  <h3>my<a href="https://www.facebook.com/profile.php?id=100039723008051">Facebook</a></h3>
   
 </body>
